--- a/MvcOnlineTicariOtomasyon/MvcOnlineTicariOtomasyon.csproj
+++ b/MvcOnlineTicariOtomasyon/MvcOnlineTicariOtomasyon.csproj
@@ -547,6 +547,10 @@
     <Content Include="Views\Satis\SatisDetay.cshtml" />
     <Content Include="Views\Urun\UrunListesi.cshtml" />
     <Content Include="Views\Fatura\Index.cshtml" />
+    <Content Include="Views\Fatura\FaturaEkle.cshtml" />
+    <Content Include="Views\Fatura\FaturaGetir.cshtml" />
+    <Content Include="Views\Fatura\FaturaDetay.cshtml" />
+    <Content Include="Views\Fatura\YeniKalem.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
