--- a/MvcOnlineTicariOtomasyon/MvcOnlineTicariOtomasyon.csproj
+++ b/MvcOnlineTicariOtomasyon/MvcOnlineTicariOtomasyon.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Controllers\PersonelController.cs" />
     <Compile Include="Controllers\SatisController.cs" />
     <Compile Include="Controllers\UrunController.cs" />
+    <Compile Include="Controllers\UrunDetayController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -593,6 +594,111 @@
     <Content Include="Views\Fatura\FaturaDetay.cshtml" />
     <Content Include="Views\Fatura\YeniKalem.cshtml" />
     <Content Include="Views\Istatistik\Index.cshtml" />
+    <Content Include="thumber\.DS_Store" />
+    <Content Include="thumber\css\.DS_Store" />
+    <Content Include="thumber\fonts\.DS_Store" />
+    <Content Include="thumber\fonts\flaticon\font\Flaticon.eot" />
+    <Content Include="thumber\fonts\flaticon\font\Flaticon.ttf" />
+    <Content Include="thumber\fonts\flaticon\font\Flaticon.woff" />
+    <Content Include="thumber\fonts\flaticon\font\Flaticon.woff2" />
+    <Content Include="thumber\fonts\flaticon\font\_flaticon.scss" />
+    <Content Include="thumber\fonts\flaticon\license\license.pdf" />
+    <Content Include="thumber\fonts\icomoon\fonts\icomoon.eot" />
+    <Content Include="thumber\fonts\icomoon\fonts\icomoon.ttf" />
+    <Content Include="thumber\fonts\icomoon\fonts\icomoon.woff" />
+    <Content Include="thumber\fonts\icomoon\selection.json" />
+    <Content Include="thumber\images\.DS_Store" />
+    <Content Include="thumber\scss\.DS_Store" />
+    <Content Include="thumber\scss\bootstrap\.DS_Store" />
+    <Content Include="thumber\scss\bootstrap\bootstrap-grid.scss" />
+    <Content Include="thumber\scss\bootstrap\bootstrap-reboot.scss" />
+    <Content Include="thumber\scss\bootstrap\bootstrap.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_alert.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_background-variant.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_badge.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_border-radius.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_box-shadow.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_breakpoints.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_buttons.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_caret.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_clearfix.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_float.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_forms.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_gradients.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_grid-framework.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_grid.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_hover.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_image.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_list-group.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_lists.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_nav-divider.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_pagination.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_reset-text.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_resize.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_screen-reader.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_size.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_table-row.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_text-emphasis.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_text-hide.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_text-truncate.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_transition.scss" />
+    <Content Include="thumber\scss\bootstrap\mixins\_visibility.scss" />
+    <Content Include="thumber\scss\bootstrap\utilities\_align.scss" />
+    <Content Include="thumber\scss\bootstrap\utilities\_background.scss" />
+    <Content Include="thumber\scss\bootstrap\utilities\_borders.scss" />
+    <Content Include="thumber\scss\bootstrap\utilities\_clearfix.scss" />
+    <Content Include="thumber\scss\bootstrap\utilities\_display.scss" />
+    <Content Include="thumber\scss\bootstrap\utilities\_embed.scss" />
+    <Content Include="thumber\scss\bootstrap\utilities\_flex.scss" />
+    <Content Include="thumber\scss\bootstrap\utilities\_float.scss" />
+    <Content Include="thumber\scss\bootstrap\utilities\_position.scss" />
+    <Content Include="thumber\scss\bootstrap\utilities\_screenreaders.scss" />
+    <Content Include="thumber\scss\bootstrap\utilities\_shadows.scss" />
+    <Content Include="thumber\scss\bootstrap\utilities\_sizing.scss" />
+    <Content Include="thumber\scss\bootstrap\utilities\_spacing.scss" />
+    <Content Include="thumber\scss\bootstrap\utilities\_text.scss" />
+    <Content Include="thumber\scss\bootstrap\utilities\_visibility.scss" />
+    <Content Include="thumber\scss\bootstrap\_alert.scss" />
+    <Content Include="thumber\scss\bootstrap\_badge.scss" />
+    <Content Include="thumber\scss\bootstrap\_breadcrumb.scss" />
+    <Content Include="thumber\scss\bootstrap\_button-group.scss" />
+    <Content Include="thumber\scss\bootstrap\_buttons.scss" />
+    <Content Include="thumber\scss\bootstrap\_card.scss" />
+    <Content Include="thumber\scss\bootstrap\_carousel.scss" />
+    <Content Include="thumber\scss\bootstrap\_close.scss" />
+    <Content Include="thumber\scss\bootstrap\_code.scss" />
+    <Content Include="thumber\scss\bootstrap\_custom-forms.scss" />
+    <Content Include="thumber\scss\bootstrap\_dropdown.scss" />
+    <Content Include="thumber\scss\bootstrap\_forms.scss" />
+    <Content Include="thumber\scss\bootstrap\_functions.scss" />
+    <Content Include="thumber\scss\bootstrap\_grid.scss" />
+    <Content Include="thumber\scss\bootstrap\_images.scss" />
+    <Content Include="thumber\scss\bootstrap\_input-group.scss" />
+    <Content Include="thumber\scss\bootstrap\_jumbotron.scss" />
+    <Content Include="thumber\scss\bootstrap\_list-group.scss" />
+    <Content Include="thumber\scss\bootstrap\_media.scss" />
+    <Content Include="thumber\scss\bootstrap\_mixins.scss" />
+    <Content Include="thumber\scss\bootstrap\_modal.scss" />
+    <Content Include="thumber\scss\bootstrap\_nav.scss" />
+    <Content Include="thumber\scss\bootstrap\_navbar.scss" />
+    <Content Include="thumber\scss\bootstrap\_pagination.scss" />
+    <Content Include="thumber\scss\bootstrap\_popover.scss" />
+    <Content Include="thumber\scss\bootstrap\_print.scss" />
+    <Content Include="thumber\scss\bootstrap\_progress.scss" />
+    <Content Include="thumber\scss\bootstrap\_reboot.scss" />
+    <Content Include="thumber\scss\bootstrap\_root.scss" />
+    <Content Include="thumber\scss\bootstrap\_tables.scss" />
+    <Content Include="thumber\scss\bootstrap\_tooltip.scss" />
+    <Content Include="thumber\scss\bootstrap\_transitions.scss" />
+    <Content Include="thumber\scss\bootstrap\_type.scss" />
+    <Content Include="thumber\scss\bootstrap\_utilities.scss" />
+    <Content Include="thumber\scss\bootstrap\_variables.scss" />
+    <Content Include="thumber\scss\style.scss" />
+    <Content Include="thumber\scss\_site-base.scss" />
+    <Content Include="thumber\scss\_site-blocks.scss" />
+    <Content Include="thumber\scss\_site-navbar.scss" />
+    <Content Include="Views\Galeri\Index.cshtml" />
+    <Content Include="Views\UrunDetay\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
