--- a/MvcOnlineTicariOtomasyon/MvcOnlineTicariOtomasyon.csproj
+++ b/MvcOnlineTicariOtomasyon/MvcOnlineTicariOtomasyon.csproj
@@ -3037,6 +3037,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Image\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
