--- a/MvcOnlineTicariOtomasyon/MvcOnlineTicariOtomasyon.csproj
+++ b/MvcOnlineTicariOtomasyon/MvcOnlineTicariOtomasyon.csproj
@@ -3069,6 +3069,8 @@
     <Content Include="Views\CariPanel\GidenMesajlar.cshtml" />
     <Content Include="Views\CariPanel\MesajDetay.cshtml" />
     <Content Include="Views\CariPanel\YeniMesaj.cshtml" />
+    <Content Include="Views\CariPanel\KargoTakip.cshtml" />
+    <Content Include="Views\CariPanel\CariKargoTakip.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
